Ver 1.3.0
02/08/2021
-Updated gacha pool up to 31/07/2021 banner.
-Removed roll command.
-Changed roll10 command into roll command.

Ver 1.2.4
15/02/2021
-Updated gacha mechanic to rate up the limited banners.
-Changed random.uniform() to random.random() for gacha roll.
-Changed text for SR pull to white.

Ver 1.2.3
15/02/2021
-Added Monika (Valentine) and Aglovale (Valentine) to Gacha pool.

Ver 1.2.2
13/02/2021
-Updated Gacha list to current available list (13/02/2021)

Ver 1.2.1
11/10/2020
-Added Juliet (Water), Diantha (Earth), Golden Knight, Florence, Gawain (Light) and Zirnitra to Gacha SSR list.

Ver 1.2.0
27/08/2020
-Added "gwbox" or "box" command to calculate how many boxes you can open by [tokens].
-Added Albert (Summer), Silva (Summer), Mimlemel (Summer) and Kaguya (Summer) to Gacha SSR list.
-Added "mukku" banner to roll and roll10 command to set SSR rate to 15%.
-Added "100" or "100%" banner to roll and roll10 command to set SSR rate to 100%.

Ver 1.1.4
03/08/2020

-Added Anila (Summer), Rosamia (Summer) and Freyr (Summer) to Gacha SSR list.
-Added "all" banner to roll and roll10 command to include all banners.

Ver 1.1.3
18/07/2020

-Added Lucio (Summer) and Abby (Summer) to Gacha SSR list.
-Updated roll and roll10 command to support multiple banner in a roll.

Ver 1.1.2
11/07/2020

-Updated feedback command to send DM of feedback message to bot owner.

Ver 1.1.1
11/07/2020

-Updated translate command language check to use ISO-639-1 language code as target language.

Ver 1.1
11/07/2020

-Updated spark command with default value of 0 for each parameters.
-Updated skill level 20 value of massive EX mod to weapon skills command.
-Updated weapon skill command to take in parameter "EX", "Xeno" and "Astral".
-Removed the 50% bonus damage on Verity, Restraint and Celere weapon skill table and updated their description.
-Changed translate command languange check from "to" into ">".