@@ -182,43 +182,43 @@ ssr_list = [["Thunder Dirk Jove", "Agielba", FIRE],
             ["Merveilleux", "Lennah (Earth)", EARTH],
             ]
 
-flashfest_list = [["Mirror-Blade Shard", "Alexiel", EARTH],
-                  ["Blutgang", "Black Knight", DARK],
+flashfest_list = [["Mirror-Blade Shard", "Alexiel (Grand)", EARTH],
+                  ["Blutgang", "Black Knight (Grand)", DARK],
                   ["Blue Sphere", "Drang (Grand)", WATER],
-                  ["Galilei's Insight", "Europa", WATER],
-                  ["Vortex of the Void", "Grimnir", WIND],
-                  ["Bab-el-Mandeb", "Helel ben Shalem", DARK],
+                  ["Galilei's Insight", "Europa (Grand)", WATER],
+                  ["Vortex of the Void", "Grimnir (Grand)", WIND],
+                  ["Bab-el-Mandeb", "Helel ben Shalem (Grand)", DARK],
                   ["Sacred Standard", "Jeanne d'Arc (Grand)", LIGHT],
-                  ["Eden", "Lucio", LIGHT],
-                  ["Kerak", "Mugen", FIRE],
-                  ["Fallen Sword", "Olivia", DARK],
-                  ["Parazonium", "Orchid", DARK],
-                  ["Purifying Thunderbolt", "Shiva", FIRE],
+                  ["Eden", "Lucio (Grand)", LIGHT],
+                  ["Kerak", "Mugen (Grand)", FIRE],
+                  ["Fallen Sword", "Olivia (Grand)", DARK],
+                  ["Parazonium", "Orchid (Grand)", DARK],
+                  ["Purifying Thunderbolt", "Shiva (Grand)", FIRE],
                   ["Ixaba", "Sturm (Grand)", FIRE],
                   ["Certificus", "Vira (Grand)", LIGHT],
                   ["Cute Ribbon", "Zooey (Grand)", DARK],
-                  ["Cerastes", "Golden Knight", EARTH],
-                  ["World Ender", "Sandalphon", EARTH],
-                  ["Radiant Rinne", "Nehan", LIGHT]
+                  ["Cerastes", "Golden Knight (Grand)", EARTH],
+                  ["World Ender", "Sandalphon (Grand)", EARTH],
+                  ["Radiant Rinne", "Nehan (Grand)", LIGHT]
                   ]
 
-legfest_list = [["Ichigo Hitofuri", "Cain", EARTH],
-                ["AK-4A", "Eugen", EARTH],
+legfest_list = [["Ichigo Hitofuri", "Cain (Grand)", EARTH],
+                ["AK-4A", "Eugen (Grand)", EARTH],
                 ["Unheil", "Ferry (Grand)", DARK],
                 ["Gambanteinn", "Io (Grand)", LIGHT],
                 ["Murgleis", "Katalina (Grand)", WATER],
                 ["Reunion", "Lecia (Grand)", WIND],
                 ["Sky Ace", "Monika (Grand)", WIND],
-                ["Ivory Ark", "Noa", LIGHT],
-                ["Taisai Spirit Bow", "Pholia", WATER],
-                ["Benedia", "Rackam", FIRE],
-                ["Sunya", "Rei", DARK],
-                ["Fist of Destruction", "Reinhardtzar", FIRE],
+                ["Ivory Ark", "Noa (Grand)", LIGHT],
+                ["Taisai Spirit Bow", "Pholia (Grand)", WATER],
+                ["Benedia", "Rackam (Grand)", FIRE],
+                ["Sunya", "Rei (Grand)", DARK],
+                ["Fist of Destruction", "Reinhardtzar (Grand)", FIRE],
                 ["Love Eternal", "Rosetta (Grand)", WIND],
                 ["Yahata's Naginata", "Leona (Grand)", EARTH],
                 ["Ouroboros Prime", "Cagliostro (Grand)", LIGHT],
                 ["Evanescence", "Narmaya (Grand)", WIND],
-                ["Atlantis", "Poseidon", WATER]
+                ["Atlantis", "Poseidon (Grand)", WATER]
                 ]
 
 zodiac_list = [["Dormius", "Andira", WIND],
@@ -387,7 +387,7 @@ ssr_summon_list = [["Adramelech", LIGHT],
                    ["Zaoshen", FIRE],
                    ["Mammoth", EARTH],
                    ["Zirnitra", DARK],
-                   ["Tsuchinoko", EARTH]
+                   ["Tsuchinoko", EARTH],
                    ["Wilnas", FIRE],
                    ["Galleon", EARTH],
 
@@ -415,17 +415,18 @@ ssr_summon_list = [["Adramelech", LIGHT],
                    ["Zeus", LIGHT],
                    ]
 
-summer_summon_list = [["Macula Marius (Summer)", WATER],
-                      ["Rose Queen (Summer)", WIND],
-                      ["Satyr (Summer)", FIRE],
-                      ["Yggdrasil (Summer)", EARTH],
-                      ["Athena (Summer)", FIRE],
-                      ["Freyr (Summer)", EARTH],
-                      ["Kaguya (Summer)", LIGHT],
-                      ["Tiamat (Summer), WIND"]
+# Limited summer are listed in double as the rollspark command use the second value of list
+summer_summon_list = [["Macula Marius (Summer)", "Macula Marius (Summer)", WATER],
+                      ["Rose Queen (Summer)", "Rose Queen (Summer)", WIND],
+                      ["Satyr (Summer)", "Satyr (Summer)", FIRE],
+                      ["Yggdrasil (Summer)", "Yggdrasil (Summer)", EARTH],
+                      ["Athena (Summer)", "Athena (Summer)", FIRE],
+                      ["Freyr (Summer)", "Freyr (Summer)", EARTH],
+                      ["Kaguya (Summer)", "Kaguya (Summer)", LIGHT],
+                      ["Tiamat (Summer)", "Tiamat (Summer)", WIND]
                       ]
 
-xmas_summon_list = [["Sariel (Holiday)", DARK]
+xmas_summon_list = [["Sariel (Holiday)", "Sariel (Holiday)", DARK]
                     ]
 
 # Rates
@@ -545,3 +546,22 @@ class Gacha:
                 self.draw_result.append(self.get_single())
                 count += 1
         return self.draw_result
+
+    def get_spark(self):
+        """
+        Do get_ten 30x and return ssr list
+        """
+        self.draw_results = []
+        self.draw_result = []
+        for i in range(30):
+            self.draw_results.append(self.get_ten())  # Result is a list of list
+        # Convert list of list into a single list
+        self.draw_result = [item for sublist in self.draw_results for item in sublist]
+        '''
+        for sublist in self.draw_results:
+            for item in sublist:
+                self.draw_result.append(item)
+        '''
+        # Filter item in list by SSR only
+        ssr_result = [ssr for ssr in self.draw_result if ssr in self.ssr_perm_pool or ssr in self.limited_pool]
+        return ssr_result
